pkg/lang/testdata/ub/stack-values/invalid/pin-unknown-key.ub
factory: { pin: { version: 'v1' } }
